--- a/projects.html
+++ b/projects.html
@@ -98,17 +98,22 @@
                     </a>
                         </div>
                     <p><font size="1">By clicking on the individual buttons in this section, you are downloading my work for each particular assignment.</font></p>
-                    </li>
+                    </li> a
                     <li>
-                        <h3>PIL Projects Using Python</h3>
-                        <div class="button10" style="background-color: E9967A" title="Image Pixelation Project Code">
+                        <h3>Projects Using Python</h3>
+                        <div class="button10" style="background-color: E9967A" title="Pixelation Project Code">
                     <a href="modified.py" download="modified.py">
-                        <p class="button10">Image Pixelation Project Code</p>
+                        <p class="button10">Pixelation Project Code</p>
                     </a> 
                         </div>
-                        <div class="button11" style="background-color: ADD8E6" title="Pixelated Image File">
+                        <div class="button11" style="background-color: ADD8E6" title="PIL Files">
                     <a href="Figure_1.png" download="Figure_1.png">
-                        <p class="button11">Pixelated Image Files</p>
+                        <p class="button11">PIL Files</p>
+                    </a>
+                        </div>
+                        <div class="button12" style="background-color: A52A2A" title="Python Snake Game Code">
+                    <a href="Usher_Cameron_SnakeGame.py" download="Usher_Cameron_SnakeGame.py" download="Snake Image.png">
+                        <p class="button12">Python Snake Game Code</p>
                     </a>
                         </div>
                     <p><font size="1">By clicking on the individual buttons in this section, you are downloading my work for each particular assignment.</font></p>
@@ -138,7 +143,8 @@
                   </div>
                   <div class="box"> 
                      <h3>Even Russell Westbrook admires this code! Well, sort of...</h3>
-                     <img src="./img/staring contest.png" title="Russell Westbrook has the last say in regards to Joel Embiid of the Philadelphia 76ers staring him down in the Thunder victory on Sunday night." width="300" height="200" align="center">
+                     <img src="./img/staring contest.png" title="Russell Westbrook has the last say in regards to Joel Embiid of the Philadelphia 76ers staring him down in the Thunder victory on Sunday night." width="180" height="120" align="center">
+                     <img src="./img/Snake Image.PNG" title="A view of my Python snake game in action!" width="120" height="120" align="center">
                   </div>
                 </div>
               </aside>
