--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
                     </a>
                         </div>
                     <p><font size="1">By clicking on the individual buttons in this section, you are downloading my work for each particular assignment.</font></p>
-                    </li> a
+                    </li> 
                     <li>
                         <h3>Projects Using Python</h3>
                         <div class="button10" style="background-color: E9967A" title="Pixelation Project Code">
@@ -118,7 +118,13 @@
                         </div>
                     <p><font size="1">By clicking on the individual buttons in this section, you are downloading my work for each particular assignment.</font></p>
                     </li>
-                      
+                    <li>
+                        <h3>Processing Projects</h3>
+                        <div class="button13" style="background-color: 2F4F4F" title="Flappy Russell Demo Code">
+                    <a href="Flappy Code.rtf" download="Flappy Code.rtf">
+                        <p class="button13">Flappy Russell Demo Code</p>
+                    </a>
+                    </li>
                   </ul>
               </article>
               
