--- a/projects.html
+++ b/projects.html
@@ -124,6 +124,13 @@
                     <a href="Flappy Code.rtf" download="Flappy Code.rtf">
                         <p class="button13">Flappy Russell Demo Code</p>
                     </a>
+                        </div>
+                        <div class="button14" style="background-color: DDA0DD" title="Flappy Russell Game">
+                    <a href="game.html">
+                        <p class="button14">Flappy Russell Game</p>
+                    </a>
+                        </div>
+                    <p><font size="1">By clicking on the individual buttons in this section, you are downloading my work for each particular assignment.</font></p>
                     </li>
                   </ul>
               </article>
@@ -151,6 +158,10 @@
                      <h3>Even Russell Westbrook admires this code! Well, sort of...</h3>
                      <img src="./img/staring contest.png" title="Russell Westbrook has the last say in regards to Joel Embiid of the Philadelphia 76ers staring him down in the Thunder victory on Sunday night." width="180" height="120" align="center">
                      <img src="./img/Snake Image.PNG" title="A view of my Python snake game in action!" width="120" height="120" align="center">
+                  </div>
+                  <div class="box">
+                      <h3>Want Processing Game Ideas? Click on the image below!</h3>
+                      <a href="https://www.openprocessing.org/curation/25/"><img src="./img/processing logo.png" title="Processing Games Site!" width="120" height="120" align="center"></a>
                   </div>
                 </div>
               </aside>
